cmake_minimum_required(VERSION 3.8)
project(spawn_turtles)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(turtlesim REQUIRED)
find_package(rclcpp REQUIRED)

# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

add_executable(spawn src/spawn_code.cpp)
ament_target_dependencies(spawn rclcpp turtlesim)

add_executable(multi_spawn src/multi_spawn.cpp)
ament_target_dependencies(multi_spawn rclcpp turtlesim)

install(TARGETS
  spawn
  multi_spawn
  DESTINATION lib/${PROJECT_NAME})
  


ament_package()
